Data statitics for Brazil Database

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 ### Some stuff that i can share
 prpc-all-data.csv
+sudeste.csv
+sudeste.zip
+sudeste_extreme_prcp.csv
+extreme_prcp.csv
+
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
